--- a/about-us.html
+++ b/about-us.html
@@ -54,7 +54,7 @@
                                 <li><a href="./index.html">Home</a></li>
 
                                 <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                                <li><a href="./schedule.html">Agenda</a></li>
+                                <!-- <li><a href="./schedule.html">Agenda</a></li> -->
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
                                 <li class="active"><a href="./about-us.html">About</a></li>
@@ -295,7 +295,7 @@
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> All rights reserved | <a
-                                    href="https://techethio.com" target="_blank">TechEthio</a>
+                                    href="https://mint.gov.et" target="_blank">TechEthio</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
