--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
                                 <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                                <li><a href="./schedule.html">Agenda</a></li>
+                                <!-- <li><a href="./schedule.html">Agenda</a></li> -->
                                 <li><a href="#">Exhibitor</a></li>
                                 <li><a href="#">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
@@ -1284,21 +1284,21 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>Bole Addis Ababa<br />Ethiopia</p>
+                            <p>Addis Ababa<br />Ethiopia</p>
                         </div>
                         <ul>
                             <li>
                                 <span>Phone:</span>
-                                (+251)-945-67-8910
+                                0111265737
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@Stride Ethiopia.com
+                                contact@mint.gov.et
                             </li>
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://techethio.com</p>
+                            <p>https://mint.gov.et</p>
                         </div>
                     </div>
                 </div>
@@ -1362,7 +1362,7 @@
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> All rights reserved | <a
-                                    href="https://techethio.com" target="_blank">TechEthio</a>
+                                    href="https://mint.gov.et" target="_blank">TechEthio</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
