--- a/pricing.html
+++ b/pricing.html
@@ -146,21 +146,21 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>Bole Addis Ababa<br/>Ethiopia</p>
+                            <p>Addis Ababa<br/>Ethiopia</p>
                         </div>
                         <ul>
                             <li>
                                 <span>Phone:</span>
-                                (+251)-945-67-8910
+                                0111265737
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info@Stride Ethiopia.com
+                                contact@mint.gov.et
                             </li>
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://techethio.com</p>
+                            <p>https://mint.gov.et</p>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> All rights reserved | <a
-                                    href="https://techethio.com" target="_blank">TechEthio</a>
+                                    href="https://mint.gov.et" target="_blank">TechEthio</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
