Registration Form Added

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary">Register Interest</p>
+                            <p class="primary" onclick="window.open('./participant.html', '_blank');">Register Interest
+                            </p>
                         </li>
                         <li>
-                            <p class="primary-btn">Exhibit 2024</p>
+                            <p class="primary-btn" onclick="window.open('./exhibitor.html', '_blank');">Exhibit 2024</p>
                         </li>
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
@@ -79,7 +80,7 @@
                                 <div class="hero-text">
                                     <span>18 to 26 May 2024, Addis Ababa, Ethiopia</span>
                                     <h2>Science Unlocks, Technology Connects, innovation Drives</h2>
-                                    <a href="./exhibitor.html" target="_blank" class="primary-btn">Register Now</a>
+                                    <!-- <a href="./exhibitor.html" target="_blank" class="primary-btn">Register Now</a> -->
                                 </div>
                             </div>
                         </div>
