Hackathon and STI Award

--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
                 <div class="swiper-slide set-bg" data-setbg="img/pricing-bg.jpg">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-9">
+                            <div class="col-lg-10">
                                 <div class="hero-text">
-                                    <h2>Stride Ethiopia Expo 2024, a highly anticipated science and technology event in
+                                    <h2 style="text-align: justify;">
+                                        Stride Ethiopia Expo 2024, a highly anticipated science and
+                                        technology event in
                                         Ethiopia</h2>
                                 </div>
                             </div>
@@ -101,10 +103,10 @@
                 <div class="swiper-slide set-bg" data-setbg="img/contact-content-bg.jpg">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-9">
+                            <div class="col-lg-10">
                                 <div class="hero-text">
-                                    <h2>Hosting the prestigious STI Award, recognizing outstanding contributions to
-                                        national development</h2>
+                                    <h2>Hosting the prestigious STI Award, recognizing
+                                        outstanding contributions to national development</h2>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +123,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="counter-text">
-                        <span>Conference Date</span>
+                        <span>Expo Date</span>
                         <h3>Count Every Second <br />Until the Event</h3>
                     </div>
                 </div>
@@ -161,7 +163,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="ha-text">
-                        <h2>About Conference</h2>
+                        <h2>About Expo</h2>
                         <p style="text-align: justify;"><b>STRIDE Ethiopia,</b> initiated by the Ministry of Innovation
                             and Technology of Ethiopia, is a pioneering annual
                             event aimed at fostering collaboration and innovation in <b>Science, Technology, Research,
@@ -1143,73 +1145,82 @@
     <!-- Schedule Section End -->
 
     <!-- Pricing Section Begin -->
-    <!-- <section class="pricing-section set-bg spad" data-setbg="img/pricing-bg.jpg">
+    <section class="pricing-section set-bg spad" data-setbg="img/pricing-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Ticket Pricing</h2>
-                        <p>Get your event ticket plan</p>
+                        <h2>Highlights</h2>
+                        <br />
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-8">
-                    <div class="price-item">
-                        <h4>1 Day Pass</h4>
-                        <div class="pi-price">
-                            <h2><span>$</span>129</h2>
-                        </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
-                        </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8">
+            <div class="row justify-content-between">
+                <div class="col-lg-6 col-md-8">
                     <div class="price-item top-rated">
                         <div class="tr-tag">
                             <i class="fa fa-star"></i>
                         </div>
-                        <h4>Full Pass</h4>
+                        <h4>Hackathon</h4>
                         <div class="pi-price">
-                            <h2><span>$</span>199</h2>
+                            <h2><span></span></h2>
                         </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
+                        <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Welcome to STRIDE
+                            Ethiopia annual hackathon event! This is your chance to unleash your
+                            creativity, collaborate with like-minded individuals, and bring your innovative ideas to
+                            life. Our hackathon is designed to bring together developers, designers, entrepreneurs, and
+                            tech enthusiasts from various backgrounds to tackle exciting challenges and create impactful
+                            solutions.</p>
+                            <br />
+                        <h5>Registration Requirements:</h5>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- Lifetime Achievement Award</li>
+                            <li>- The Best Digitally Enabled Institutions Award</li>
+                            <li>- Research Excellence Award</li>
+                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
+                                Disabilities)
+                            </li>
+                            <li>- Technological Innovation Award (honors the development of a new and impactful
+                                technology)</li>
                         </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
+                        <a href="https://forms.gle/v7E3W75mbgyiXrKo9" target="_blank" class="price-btn">Register Now
+                            <span class="arrow_right"></span></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-8">
-                    <div class="price-item">
-                        <h4>Group Pass</h4>
-                        <div class="pi-price">
-                            <h2><span>$</span>79</h2>
+                <div class="col-lg-6 col-md-10">
+                    <div class="price-item top-rated">
+                        <div class="tr-tag">
+                            <i class="fa fa-star"></i>
                         </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
+                        <h4>STI Award</h4>
+                        <div class="pi-price">
+                            <h2><span></span></h2>
+                        </div>
+                        <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Do you know a
+                            groundbreaking mind or a revolutionary project and organization that deserves
+                            recognition? The STI Award 2024 celebrate the remarkable achievements of individuals, teams,
+                            and organization who are pushing the boundaries of science, technology, and innovation.
+                            We're looking for nominations in a variety of categories that showcase the transformative
+                            power of STI across different fields.
+                        </p>
+                        <h5>Nomination Categories:</h5>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- Lifetime Achievement Award</li>
+                            <li>- The Best Digitally Enabled Institutions Award</li>
+                            <li>- Research Excellence Award</li>
+                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
+                                Disabilities)
+                            </li>
+                            <li>- Technological Innovation Award (honors the development of a new and impactful
+                                technology)</li>
                         </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAji9y5HKgekJpv6QmCz3SVvO82lW94NxX88m2Fj1BkyZ0Yw/viewform"
+                            target="_blank" class="price-btn">Register Now <span class="arrow_right"></span></a>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Pricing Section End -->
 
     <!-- latest BLog Section Begin -->
