--- a/index.html
+++ b/index.html
@@ -1155,8 +1155,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-between">
-                <div class="col-lg-6 col-md-8">
+            <div class="row justify-center">
+                <div class="col-lg-5 col-md-8">
                     <div class="price-item top-rated">
                         <div class="tr-tag">
                             <i class="fa fa-star"></i>
@@ -1171,8 +1171,7 @@
                             life. Our hackathon is designed to bring together developers, designers, entrepreneurs, and
                             tech enthusiasts from various backgrounds to tackle exciting challenges and create impactful
                             solutions.</p>
-                            <br />
-                        <h5>Registration Requirements:</h5>
+                        <br />
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
                             <li>- Lifetime Achievement Award</li>
                             <li>- The Best Digitally Enabled Institutions Award</li>
@@ -1187,7 +1186,7 @@
                             <span class="arrow_right"></span></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-10">
+                <div class="col-lg-7 col-md-10">
                     <div class="price-item top-rated">
                         <div class="tr-tag">
                             <i class="fa fa-star"></i>
@@ -1203,19 +1202,27 @@
                             We're looking for nominations in a variety of categories that showcase the transformative
                             power of STI across different fields.
                         </p>
-                        <h5>Nomination Categories:</h5>
+                        <h6>AgriTech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- Lifetime Achievement Award</li>
-                            <li>- The Best Digitally Enabled Institutions Award</li>
-                            <li>- Research Excellence Award</li>
-                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
-                                Disabilities)
-                            </li>
-                            <li>- Technological Innovation Award (honors the development of a new and impactful
-                                technology)</li>
+                            <li>- Digital Real Time Weather Forecast</li>
+                            <li>- Market Information System </li>
                         </ul>
+                        <h6>HealthTech </h6>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- Telemedicine (Remote Diagnostics)</li>
+                            <li>- AI in diseases surveillance, early detection and preventive healthcare </li>
+                        </ul>
+                        <h6> EduTech </h6>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- Digital class rooms and remote learning</li>
+                            <li>- Virtual Libraries </li>
+                        </ul>
+                        <h6> Tourism Tech </h6>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- AI customized tourism marketing tools</li>
+                            <li>- VR/AR based tourism</li>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAji9y5HKgekJpv6QmCz3SVvO82lW94NxX88m2Fj1BkyZ0Yw/viewform"
-                            target="_blank" class="price-btn">Register Now <span class="arrow_right"></span></a>
+                            target="_blank" class="price-btn" style="margin-left: 25%;">Register Now <span class="arrow_right"></span></a>
                     </div>
                 </div>
             </div>
