STI and Hackathon

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                 </div>
             </div>
             <div class="row justify-center">
-                <div class="col-lg-5 col-md-8">
+                <div class="col-lg-6 col-md-8">
                     <div class="price-item top-rated">
                         <div class="tr-tag">
                             <i class="fa fa-star"></i>
@@ -1168,40 +1168,7 @@
                         <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Welcome to STRIDE
                             Ethiopia annual hackathon event! This is your chance to unleash your
                             creativity, collaborate with like-minded individuals, and bring your innovative ideas to
-                            life. Our hackathon is designed to bring together developers, designers, entrepreneurs, and
-                            tech enthusiasts from various backgrounds to tackle exciting challenges and create impactful
-                            solutions.</p>
-                        <br />
-                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- Lifetime Achievement Award</li>
-                            <li>- The Best Digitally Enabled Institutions Award</li>
-                            <li>- Research Excellence Award</li>
-                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
-                                Disabilities)
-                            </li>
-                            <li>- Technological Innovation Award (honors the development of a new and impactful
-                                technology)</li>
-                        </ul>
-                        <a href="https://forms.gle/v7E3W75mbgyiXrKo9" target="_blank" class="price-btn">Register Now
-                            <span class="arrow_right"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-md-10">
-                    <div class="price-item top-rated">
-                        <div class="tr-tag">
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <h4>STI Award</h4>
-                        <div class="pi-price">
-                            <h2><span></span></h2>
-                        </div>
-                        <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Do you know a
-                            groundbreaking mind or a revolutionary project and organization that deserves
-                            recognition? The STI Award 2024 celebrate the remarkable achievements of individuals, teams,
-                            and organization who are pushing the boundaries of science, technology, and innovation.
-                            We're looking for nominations in a variety of categories that showcase the transformative
-                            power of STI across different fields.
-                        </p>
+                            life.</p>
                         <h6>AgriTech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
                             <li>- Digital Real Time Weather Forecast</li>
@@ -1221,8 +1188,41 @@
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
                             <li>- AI customized tourism marketing tools</li>
                             <li>- VR/AR based tourism</li>
+                        </ul>
+                        <a href="https://forms.gle/v7E3W75mbgyiXrKo9" target="_blank" class="price-btn">Register Now
+                            <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-10">
+                    <div class="price-item top-rated">
+                        <div class="tr-tag">
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>STI Award</h4>
+                        <div class="pi-price">
+                            <h2><span></span></h2>
+                        </div>
+                        <p style="padding-left: 50px; padding-right: 50px; text-align: justify;">Do you know a
+                            groundbreaking mind or a revolutionary project and organization that deserves
+                            recognition? The STI Award 2024 celebrate the remarkable achievements of individuals, teams,
+                            and organization who are pushing the boundaries of science, technology, and innovation.
+                            We're looking for nominations in a variety of categories that showcase the transformative
+                            power of STI across different fields.
+                        </p>
+                        <br />
+                        <h5>Nomination Categories:</h5>
+                        <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
+                            <li>- Lifetime Achievement Award</li>
+                            <li>- The Best Digitally Enabled Institutions Award</li>
+                            <li>- Research Excellence Award</li>
+                            <li>- STI Excellence Award (under the categories of Youth, Women, & Person with
+                                Disabilities)
+                            </li>
+                            <li>- Technological Innovation Award (honors the development of a new and impactful
+                                technology)</li>
+                        </ul>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAji9y5HKgekJpv6QmCz3SVvO82lW94NxX88m2Fj1BkyZ0Yw/viewform"
-                            target="_blank" class="price-btn" style="margin-left: 25%;">Register Now <span class="arrow_right"></span></a>
+                            target="_blank" class="price-btn">Register Now <span class="arrow_right"></span></a>
                     </div>
                 </div>
             </div>
