--- a/pricing.html
+++ b/pricing.html
@@ -35,8 +35,8 @@
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <!-- <img src="img/logo.png" alt=""> -->
-                    <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3>
+                    <img src="img/logo.png" alt="STRIDE ETHIOPIA EXPO 2024">
+                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
